--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=patient-service
-spring.application.name=MRS
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:mrsapp
+spring.datasource.url=jdbc:h2:~/mrsapp
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
